# rpi_cam

./: CMakeLists.txt
src/Motion/: MotionDetector.h
src/Notification/: Notifier.h
src/Record/: CameraRecorder.h
src/test/: main.cpp
